# research-paper-aggregator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
podcast_audio/: 2601.07835v1_script.txt  2601.07835v1_script_700_words.txt  feed.xml
src/: collector.py  knowledgebase.py  pipeline.py  podcast.py  serve_podcast_feed.py  structs.py  summarizer.py  zotero.py
