[project]
name = "paper-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "arxiv>=2.3.1",
    "chromadb>=1.3.6",
    "feedgen>=1.0.0",
    "openai>=2.9.0",
    "pymupdf>=1.26.7",
    "pyzotero>=1.7.6",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "typer>=0.20.0",
]
